--- a/templates/layouts/simple.html
+++ b/templates/layouts/simple.html
@@ -39,12 +39,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="#">Kinoweekend</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">History</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="#contact">Forum</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
