--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,4 +1,7 @@
+{% extends 'layouts/simple.html' %}
+{% comment %}
 {% include "layouts/navbar.html" with active_tab='home' %}
+{% endcomment %}
 
 {% block body %}
 {% autoescape off %}
