--- a/templates/layouts/simple.html
+++ b/templates/layouts/simple.html
@@ -14,7 +14,9 @@
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
+    {% comment %}
     <link href="{{ STATIC_URL }}lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    {% endcomment %}
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -27,12 +29,48 @@
     <link rel="apple-touch-icon" sizes="72x72" href="{{ STATIC_URL }}images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}images/apple-touch-icon-114x114.png">
     {% block styles %}{% endblock %}
+
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/tests/vendor/jquery.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/app.js"></script>    
   </head>
 
   <body>
 
-      {% block navbar %}
-      {% endblock %}
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">Kinoweekend</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+                <li id="home-link">
+                    <a href="#">
+                        <i class="icon-home icon-white"></i>
+                    </a>
+                </li>
+                <li id="news-link">
+                    <a href="{% url news %}">
+                        <i class="i"></i>
+                        News
+                </a>
+            </li>
+              <li id="works-link"><a href="{% url works %}">Works</a></li>
+    {% comment %}
+              <li class="{% if active_tab == 'news' %} active{% endif %}"><a href="#">News</a></li>
+    {% endcomment %}
+              <li><a href="#">History</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li><a href="#contact">Forum</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
 
     <div class="container">
 
@@ -47,6 +85,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-transition.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-alert.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-modal.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-dropdown.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-scrollspy.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-tab.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-popover.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-button.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-collapse.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-carousel.js"></script>
+    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-typeahead.js"></script>
+    {% comment %}
     <script src="{{ STATIC_URL }}lib/bootstrap/js/tests/vendor/jquery.js"></script>
     <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-transition.js"></script>
     <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-alert.js"></script>
@@ -60,7 +111,7 @@
     <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-collapse.js"></script>
     <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-carousel.js"></script>
     <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-typeahead.js"></script>
-
     {% block script %}{% endblock %}
+    {% endcomment %}
   </body>
 </html>
