--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -1,4 +1,7 @@
+{% extends 'layouts/simple.html' %}
+{% comment %}
 {% include "layouts/navbar.html" with active_tab='news' %}
+{% endcomment %}
 
 {% block body %}
     {% if posts %}
