--- a/templates/layouts/simple.html
+++ b/templates/layouts/simple.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="{{ STATIC_URL }}lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -30,7 +30,8 @@
     <link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}images/apple-touch-icon-114x114.png">
     {% block styles %}{% endblock %}
 
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/tests/vendor/jquery.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <!--<script src="{{ STATIC_URL }}lib/bootstrap/js/tests/vendor/jquery.js"></script>-->
     <script type="text/javascript" src="{{ STATIC_URL }}js/app.js"></script>    
   </head>
 
@@ -47,18 +48,9 @@
           <a class="brand" href="#">Kinoweekend</a>
           <div class="nav-collapse">
             <ul class="nav">
-                <li id="home-link">
-                    <a href="#">
-                        <i class="icon-home icon-white"></i>
-                    </a>
-                </li>
-                <li id="news-link">
-                    <a href="{% url news %}">
-                        <i class="i"></i>
-                        News
-                </a>
-            </li>
-              <li id="works-link"><a href="{% url works %}">Works</a></li>
+                <li id="home-link"><a href="#"><i class="icon-home icon-white"></i></a></li>
+                <li id="news-link"><a href="{% url news %}"><i class="i"></i>News</a></li>
+                <li id="works-link"><a href="{% url works %}">Works</a></li>
     {% comment %}
               <li class="{% if active_tab == 'news' %} active{% endif %}"><a href="#">News</a></li>
     {% endcomment %}
@@ -85,18 +77,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-transition.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-alert.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-modal.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-dropdown.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-scrollspy.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-tab.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-tooltip.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-popover.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-button.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-collapse.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-carousel.js"></script>
-    <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-typeahead.js"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
     {% comment %}
     <script src="{{ STATIC_URL }}lib/bootstrap/js/tests/vendor/jquery.js"></script>
     <script src="{{ STATIC_URL }}lib/bootstrap/js/bootstrap-transition.js"></script>
