--- a/templates/news/details.html
+++ b/templates/news/details.html
@@ -13,19 +13,25 @@
             <p>{{ post.body|safe }}</p>
         {% endif %}
 
+            <ul class="pager">
         {% with post.get_previous_by_publish_at as prev %}
             {% if prev and prev.is_visible %}
-            <a href="{{ prev.get_absolute_url }}">
-                &lt; {{ prev }}</a>
+              <li class="previous">
+                  <a href="{{ prev.get_absolute_url }}" title="{{ prev }}" >&larr; Previous</a>
+              </li>
             {% endif %}
         {% endwith %}
-        <a href="{% url home %}">Back to news list</a>
+              <li>
+                <a href="{% url news %}">Back to news list</a>
+              </li>
         {% with post.get_next_by_publish_at as next %}
             {% if next and next.is_visible %}
-            <a href="{{ next.get_absolute_url }}">
-                {{ next }} &gt;</a>
+                <li class="next">
+                  <a href="{{ next.get_absolute_url }}" title="{{ next }}" >&rarr; Newer</a>
+                </li>
             {% endif %}
         {% endwith %}
+            </ul>
     </div>
 {% endblock %}
 
