--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -1,23 +1,14 @@
-{% extends 'layouts/main-body.html' %}
+{% extends 'layouts/simple.html' %}
 
-{% block page_content %}
-    {% if posts %}
-        <ul>
-        {% for post in posts %}
-            <div class="row">
-                <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-                <p> {{ post.publish_at }}</p>
-                {% autoescape off %}
-                <p> {{ post.excerpt }}</p>
-                {% endautoescape %}
-             </div>
-            <div class="row">
-                <p>&not; <a href="{{ post.get_absolute_url }}">read more</a></p>
-            </div>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>Sorry, not news yet</p>
-    {% endif %}
+{% block body %}
+      <div class="hero-unit">
+          <h1>Heading</h1>
+          <p>Tagline</p>
+          <p>
+            <a class="btn btn-primary btn-large">
+              Learn more
+            </a>
+          </p>
+    </div>
 {% endblock %}
 
