--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -7,16 +7,16 @@
     {% if posts %}
         <ul>
         {% for post in posts %}
-            <div class="row">
-                <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-                <p> {{ post.publish_at }}</p>
-                {% autoescape off %}
-                <p> {{ post.excerpt }}</p>
-                {% endautoescape %}
-             </div>
-            <div class="row">
-                <p>&not; <a href="{{ post.get_absolute_url }}">read more</a></p>
-            </div>
+        <div class="article">
+            <div class="article-header"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a><span class="header-comment-count"> {{ post.publish_at }}</span></div>
+                <div class="article-content">
+                    <div class="article-description">
+                        {% autoescape off %}
+                            {{ post.excerpt }}
+                        {% endautoescape %}
+                    </div>
+                </div>
+        </div>
         {% endfor %}
         </ul>
     {% else %}
