only css style, django-hvad не осваивал

--- a/templates/layouts/simple.html
+++ b/templates/layouts/simple.html
@@ -65,7 +65,7 @@
 
   <div class="row">
 
-      <div class="span2">
+      <div class="span2 transbox">
           <ul class="thumbnails">
               <li>
                 <div class="thumbnail">
@@ -78,13 +78,13 @@
           ...
       </div>
 
-  <div class="span8">
+  <div class="span8 transbox">
       {% block body %}
       <p>Test</p>
       {% endblock %}
-    </div>
+  </div>
 
-    <div class="span2">
+    <div class="span2 transbox">
           <ul class="thumbnails">
               <li>
                 <div class="thumbnail">
@@ -94,7 +94,6 @@
                 </div>
               </li>
           </ul>
-        ...
     </div>
     </div>
 
