--- a/ext_static/css/bootstrap.css
+++ b/ext_static/css/bootstrap.css
@@ -7,6 +7,32 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+
+div.transbox {
+  background-color:#ffffff;
+  opacity:0.7;
+  filter:alpha(opacity=90); /* For IE8 and earlier */
+  }
+
+#bg {
+	position:fixed;
+	top:-50%;
+	left:-50%;
+	width:200%;
+	height:200%;
+}
+#bg img {
+	position:absolute;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	margin:auto;
+	min-width:50%;
+	min-height:50%;
+}
+
+
 .clearfix {
   *zoom: 1;
 }
@@ -137,9 +163,15 @@ body {
   line-height: 18px;
   color: #333333;
   background-color: #ffffff;
+
+	background: url(../images/background.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 a {
-  color: #0088cc;
+  color: #92cc44;
   text-decoration: none;
 }
 a:hover {
