--- a/templates/main/intro.html
+++ b/templates/main/intro.html
@@ -1,83 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %}{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Ilya Bezrukov">
+<!doctype html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title></title>
+  <meta name="description" content="">
 
-    <!-- Le styles -->
-    <link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/bootstrap.css">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="{{STATIC_URL}}css/style2.css">
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+</head>
+<body>
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico">
-    <link rel="apple-touch-icon" href="{{ STATIC_URL }}images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="{{ STATIC_URL }}images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}images/apple-touch-icon-114x114.png">
+  <header>
+  </header>
 
-    <script src="{{ STATIC_URL }}js/jquery-1.7.1.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/app.js"></script>    
-  </head>
+  <div id="cont">
+    <!--<h3 class="h5bp">
+      CSS-Tricks
+  </h3>--> 
+  <div id="page-wrap">
+        <img src="{{STATIC_URL}}images/intro-eng.jpg" alt="">
+           <p>KinoWeekend is a non-commercial art festival under time, technical and theme conditions. The main goal is to make up a script according to the given task, then shoot, cut and dub a short film within 72 hours! All the conditions (theme/ object/ film genre) will be announced in the first festival day and the participating works will be assessed by the professional jury and ordinary spectators.
 
-  <body>
-     <header class="container">
-         <div class="content">
-           <div class="page-header pull-right">
-               <h1>KinoWeekend <small>НеОфициальный несайт кинофестиваля</small></h1>
-           </div>
-         </div>
-     </header>
+Festival participation is FREE OF CHARGE.</p>
+    </div>
+    </div>
 
-    <div class="container">
+    <div id="menu">
+        <h1><a href="{%url home%}"><b>Kino</b>Weekend</a></h1>
+		<div>
+			<ul class="large">
+				<li><a href="introduction">RUSSIAN</a></li>
+				<li class="left"><a href="shanghai">ENGLISH</a></li>
+			</ul>
+		</div>
+	</div>
 
-         <div id="bg">
-          <img src="{{STATIC_URL}}images/intro-eng.jpg" alt="">
-         </div> 
-        {% block navbar %}
-        {% endblock %}
+  <div role="main">
 
-      <div class="row-fluid">
-          <div class="span3">
-              &nbsp;
-          </div>
-          <div class="span6">
-              <ul class="thumbnails">
-                  <li>
-                    <div class="thumbnail">
-                      <img src="{{STATIC_URL}}images/intro-eng.jpg" alt="">
-                    </div>
-                  </li>
-              </ul>
-              <ul class="pager">
-                  <li>
-                      <a href="{% url home %}"><strong>Русский</strong></a>
-                  </li>
-                  <li>
-                    <a href="#"><strong>English</strong></a>
-                  </li>
-              </ul>
-          </div>
+  </div>
+  <footer>
 
-      </div>
+  </footer>
 
-       <footer>
-           <p>
-               Content and Videos &copy; 2012 kinoweekend 
-           </p>
-       </footer>
-
-        </div> <!-- /container -->
-
-        <!-- Le javascript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
-        {% block script %}{% endblock %}
-  </body>
+</body>
 </html>
