--- a/home/templates/intro.html
+++ b/home/templates/intro.html
@@ -32,8 +32,8 @@ Festival participation is FREE OF CHARGE.</p>
         <h1><a href="{%url home%}"><b>Kino</b>Weekend</a></h1>
 		<div>
 			<ul class="large">
-                <li class="left"><a href="{% locale_url "ru" "news.views.index" %}">Russian</a></li>
-                <li><a href="{% locale_url "en" "news.views.index" %}">English</a></li>
+                <li class="left"><a href="{% locale_url "ru" "home.views.home" %}">Russian</a></li>
+                <li><a href="{% locale_url "en" "home.views.home" %}">English</a></li>
 			</ul>
 		</div>
 	</div>
