--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,6 +1,27 @@
 {% extends 'simple.html' %}
 
 {% block body %}
+
+    {% if posts %}
+        <ul>
+        {% for post in posts %}
+        <div class="article">
+            <div class="article-header"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a><span class="header-comment-count"> {{ post.publish_at }}</span></div>
+                <div class="article-content">
+                    <div class="article-description">
+                        {% autoescape off %}
+                            {{ post.teaser }}
+                        {% endautoescape %}
+                    </div>
+                </div>
+        </div>
+        {% endfor %}
+    {% else %}
+        <p>Sorry, not news yet</p>
+    {% endif %}
+        </ul>
+
+        {% comment%}
       <div class="hero-unit">
           <h1>Heading</h1>
           <p>Tagline</p>
@@ -10,5 +31,6 @@
             </a>
           </p>
     </div>
+        {% endcomment%}
 {% endblock %}
 
