--- a/ext_static/css/bootstrap.css
+++ b/ext_static/css/bootstrap.css
@@ -10,14 +10,20 @@
 
 div.transbox {
   background-color:#ffffff;
-  opacity:0.7;
+  opacity:0.97;
   filter:alpha(opacity=90); /* For IE8 and earlier */
   }
 
 select.form_test {
   width: 105px;
     }
+div.my_view_content {
+  padding: 20px;
+}
 
+div.my_view_content p {
+    text-indent: 25px;
+}
 #bg {
 	position:fixed;
 	top:-50%;
@@ -359,11 +365,11 @@ a:hover {
 p {
   margin: 0 0 9px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 13px;
+  font-size: 15px;
   line-height: 18px;
 }
 p small {
-  font-size: 11px;
+  font-size: 12px;
   color: #999999;
 }
 .lead {
