--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,7 @@
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "О фестивале"%} <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">{% trans "О фестивале"%}</a></li>
+              <li><a href="/regulations/">{% trans "О фестивале"%}</a></li>
               <li><a href="#">{% trans "Положение"%}</a></li>
               <li><a href="#">{% trans "Расписание"%}</a></li>
             </ul>
