--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,6 @@
 {% load i18n %}
+{% load localeurl_tags %}
+{% load locale_url from localeurl_future %}
 <div class="navbar">
   <div class="navbar-inner">
     <div class="container" style="width: auto;">
@@ -14,7 +16,7 @@
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "О фестивале"%} <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="/regulations/">{% trans "О фестивале"%}</a></li>
+              <li><a href="{% url home %}../regulations/">{% trans "О фестивале"%}</a></li>
               <li><a href="#">{% trans "Положение"%}</a></li>
               <li><a href="#">{% trans "Расписание"%}</a></li>
             </ul>
