--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,8 +16,8 @@
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "О фестивале"%} <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="{% url home %}../regulations/">{% trans "О фестивале"%}</a></li>
-              <li><a href="#">{% trans "Положение"%}</a></li>
+              <li><a href="{% url home %}../about/">{% trans "О фестивале"%}</a></li>
+              <li><a href="{% url home %}../regulations/">{% trans "Положение"%}</a></li>
               <li><a href="#">{% trans "Расписание"%}</a></li>
             </ul>
           </li>
@@ -26,7 +26,7 @@
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Контакты "%} <b class="caret"></b></a>
             <ul class="dropdown-menu">
-                <li><a href="#">{% trans "Контакты "%}</a></li>
+                <li><a href="{% url home %}../contacts/">{% trans "Контакты "%}</a></li>
               <li class="divider"></li>
               <li><a href="#">{% trans "Наша Команда "%}</a></li>
               <!--<li class="nav-header">Допoлнительная инф.</li>-->
