add forum.kinoweekend.org - askbot.org

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,7 +34,7 @@
               <li><a href="#">{% trans "Прессе "%}</a></li>
             </ul>
           </li>
-          <li id="news-link"><a href="{% url home %}"><i class="i"></i>{% trans "Форум"%}</a></li>
+          <li id="news-link"><a href="http://forum.kinoweekend.org"><i class="i"></i>{% trans "Форум"%}</a></li>
         </ul>
         <form class="navbar-search pull-left" action="">
             <input type="text" class="search-query span2" placeholder="Search">
