--- a/templates/simple.html
+++ b/templates/simple.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Ilya Bezrukov">
+    <meta name="google-site-verification" content="1phSA9JRapQzNg_uqVjcC8HaAoHKuyGOstaMIqDr-RE" />
 
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
