add Google Webmaster Tools attempt2

--- a/home/templates/intro.html
+++ b/home/templates/intro.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title></title>
   <meta name="description" content="">
+  <meta name="author" content="Ilya Bezrukov">
+  <meta name="google-site-verification" content="1phSA9JRapQzNg_uqVjcC8HaAoHKuyGOstaMIqDr-RE" />
 
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="{{STATIC_URL}}css/style2.css">
