--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="/">КиноweekenD</a>
+      <a class="brand" href="/">КиноWeekend</a>
       <div class="nav-collapse">
         <ul class="nav">
             <li id="home-link"><a href="{%url home %}"><i class="icon-home icon-white"></i></a></li>
