--- a/templates/simple.html
+++ b/templates/simple.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}KinoWeekend{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Ilya Bezrukov">
@@ -53,8 +53,8 @@
 
      <header class="container">
      <div class="content">
-       <div class="page-header pull-right">
-           <h1>КиноweekenD <small>НеОфициальный несайт кинофестиваля</small></h1>
+       <div class="page-header alert alert-success pull-right ">
+           <h1><strong style="color: #292929">КиноWeekend</strong> <small><em>Официальный сайт фестиваля</em></small></h1>
        </div>
      </div>
      </header>
