--- a/ext_static/css/style2.css
+++ b/ext_static/css/style2.css
@@ -1,7 +1,7 @@
 @import url('yui-reset.css');
 
 html {
-	background: url(../images/background.jpg) no-repeat center center fixed;
+	background: url(../images/bg2.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
