--- a/templates/simple.html
+++ b/templates/simple.html
@@ -65,6 +65,7 @@
             {% include "navbar.html" %}
         {% endblock %}
 
+       <div class="content">
   <div class="row">
 
       <div class="span2 transbox">
@@ -98,6 +99,7 @@
           </ul>
     </div>
     </div>
+     </div>
 
    <footer>
        <p>
