--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,56 +1,93 @@
 {% extends 'simple.html' %}
+{% load thumbnail %}
 
 {% block body %}
 <div class="my_view_content">
-    <div class="page-header">
+    <div class="article-header">
         <h1>History of the Festival</h1>
     </div>
-<div class="well">
+    <br/>
+    <div class="well">
         <p style="text-indent: 25px">
             The first festival KinoWeekend was organized on 8-11th of October 2010, at that time only in St. Petersburg. The idea has been supported by the other “Youth Film Studio”-branches and already in May 2011 the intercity movie-making marathon KinoWeekend took place in 6 cities of Russia at the same time.
-    </p>
-<br/>
-    <ul>
-        <li><strong>Dec 10-13,  2010  ̶  St. Petersburg</strong></li>
-        <li><strong>Apr 25-28, 2011  ̶  St. Petersburg</strong></li>
-        <li><strong>May 12-16, 2011 ̶  St. Petersburg, Moscow, Kazan, Nizhny Novgorod, Perm, Yekaterinburg</strong></li>
-        <li><strong>Nov 10-14, 2011 ̶  St. Petersburg</strong></li>
-        <li><strong>Nov 24-28, 2011 ̶  Moscow</strong></li>
-        <li><strong>Dec 1-4, 2011 ̶  Kazan</strong></li>
-        <li><strong>Dec 15-18, 2011 ̶  Nizhny Novgorod</strong></li>
-        <li><strong>Mar 1-5, 2012 – Perm</strong></li>
-    </ul>
-</div>
-
-{% if photo %}
-<div class="article">
-    <div class="preview-image">
-        <img src="{{MEDIA_URL}}{{ photo.preview }}" />
+        </p>
+        <ul>
+            <li><strong>Dec 10-13,  2010  ̶  St. Petersburg</strong></li>
+            <li><strong>Apr 25-28, 2011  ̶  St. Petersburg</strong></li>
+            <li><strong>May 12-16, 2011 ̶  St. Petersburg, Moscow, Kazan, Nizhny Novgorod, Perm, Yekaterinburg</strong></li>
+            <li><strong>Nov 10-14, 2011 ̶  St. Petersburg</strong></li>
+            <li><strong>Nov 24-28, 2011 ̶  Moscow</strong></li>
+            <li><strong>Dec 1-4, 2011 ̶  Kazan</strong></li>
+            <li><strong>Dec 15-18, 2011 ̶  Nizhny Novgorod</strong></li>
+            <li><strong>Mar 1-5, 2012 – Perm</strong></li>
+        </ul>
     </div>
-    <div class="article-content">
-        <div class="article-header"><h4>{{ photo.title }}</h4></div>
-        <div class="article-description">
-            {{ photo.excerpt }}
+
+    {% if photo %}
+    <div class="article">
+        <div class="preview-image">
+
+                {% thumbnail photo.preview "200x120" crop="center" as small %}
+                    <a href="{{MEDIA_URL}}{{ photo.preview }}" title="look ma!" target="_blank"><img src="{{ small.url }}"></a>
+                {% endthumbnail %}
+        </div>
+        <div class="article-content">
+            <div class="article-header"><a href="../photo/{{photo.slug}}">{{ photo.title }}</a></div>
+            <div class="article-description">
+                {{ photo.excerpt }}
+            </div>
         </div>
     </div>
-</div>
-{%endif%}
+    {%endif%}
 
 
 {% if videos %}
-{% for v in videos %}
+{% for v in videos.object_list %}
 <div class="article">
     <div class="preview-image">
         <img src="{{ v.preview }}" />
     </div>
     <div class="article-content">
-        <div class="article-header"><a href="{{ v.get_absolute_url }}">{{ v.name }}</a></div>
+        <div class="article-header"><a href="{{ v.get_absolute_url }}">{{ v.name }}</a>  <span class="header-city"><em>{{ v.city }}</em></span></div>
+        {%if v.authors %}
+            <div class="article-description">
+                <span><strong>Реж: </strong>{{ v.authors }}</span>
+            </div>
+        {% endif %}
+        {% if v.prize %}
+            <div class="article-prize">
+                <span class="label label-info">{{v.prize}}</span>
+            </div>
+        {% endif %}
         <div class="article-description">
             {{ v.teaser }}
         </div>
     </div>
 </div>
 {% endfor %}
+
+<div class="row">
+    <div class="span6">
+        <div class="pagination">
+            <ul>
+            {% if videos.has_previous %}
+                <li class="prev"><a href="?page={{ videos.previous_page_number }}">previous</a></li>
+            {% endif %}
+            {% for pgn in videos.paginator.page_range %}
+                {% if videos.number == pgn %}
+                <li class="active"><a href="?page={{ pgn }}">{{ pgn }}</a></li>
+                {% else %}
+                <li><a href="?page={{ pgn }}">{{ pgn }}</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if videos.has_next %}
+                <li class="next"><a href="?page={{ videos.next_page_number }}">next</a></li>
+            {% endif %}
+            </ul>
+        </div> <!--pagination -->
+    </div> <!-- span -->
+</div>
+
 {% endif %}
 </div>
 {% endblock %}
