--- a/ext_static/css/bootstrap.css
+++ b/ext_static/css/bootstrap.css
@@ -7,6 +7,10 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+
+.my_pagging > ul li {
+    padding: 5px 10px 15px 20px;
+    }
 .footer {
   border-top-color:#E5E5E5;
   border-top-style:solid;
