--- a/templates/simple.html
+++ b/templates/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 {% load i18n %}
-<html lang="en">
+<html lang={% trans "en"%}>
   <head>
-    <meta charset="utf-8">
     <title>{% block title %}KinoWeekend{% endblock %}</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Ilya Bezrukov">
@@ -35,7 +35,6 @@
     <script src="{{ STATIC_URL }}js/jquery-1.7.1.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/app.js"></script>    
     <script type="text/javascript">
-
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-30499954-1']);
       _gaq.push(['_trackPageview']);
@@ -45,7 +44,6 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-
     </script>
   </head>
 
@@ -60,25 +58,28 @@
      </header>
 
     <div class="container">
-
        {% block navbar %}
            {% include "navbar.html" %}
        {% endblock %}
+    </div>
 
+    <div class="container">
        <div class="content">
           <div class="row">
-
-              <div class="span2 transbox">
-                  <ul class="thumbnails">
-                      <li>
-                        <div class="thumbnail">
-                          <img src="http://placehold.it/140x80" alt="">
-                          <h5>Партнеры</h5>
-                          <p>Thumbnail caption right here...</p>
-                        </div>
-                      </li>
-                  </ul>
+              <div class="span2">
+                  {% block lift_sidebar %}
+                      <ul class="thumbnails">
+                          <li class="span2">
+                            <div  align="middle" class="thumbnail">
+                              <a href="http://vtr-center.ru/" title="look ma!" target="_blank">
+                                <img src="https://s3-eu-west-1.amazonaws.com/kinoweekend/partner_VRT.jpg" alt="vtr-center" width="80%">
+                              </a>
+                            </div>
+                          </li>
+                      </ul>
+                  {% endblock %}
               </div>
+
 
               <div class="span8 transbox">
                   {% block body %}
@@ -87,24 +88,24 @@
               </div>
 
                <div class="span2 transbox">
-                 <ul class="thumbnails">
-                     <li>
-                       <div class="thumbnail">
-                         <img src="http://placehold.it/140x80" alt="">
-                         <h5>Спонсоры</h5>
-                         <p>Thumbnail caption right here...</p>
-                       </div>
-                     </li>
-                 </ul>
+                  {% block right_sidebar %}
+                  {% endblock %}
                </div>
           </div>
        </div>
+    </div> <!-- /container -->
 
-       <footer>
-           <p>Content and Videos &copy; 2012 kinoweekend</p>
+    <div class="container" style="width: 100%">
+       <footer class="footer">
+           <p><strong>
+               &copy; 2012 kinoweekend | {% trans "Follow us on" %}
+               <a link="#79a3c0" href="http://vk.com/kinoweekend" target="_blank">{% trans "Vkontakte" %}</a> and 
+               <a href="http://www.facebook.com/groups/358970440812074/" target="_blank">Facebook</a>
+           </strong></p>
        </footer>
 
     </div> <!-- /container -->
+
 
 
     <!-- Le javascript
