--- a/news/templates/details.html
+++ b/news/templates/details.html
@@ -5,12 +5,17 @@
 {% endblock %}
 
 {% block body %}
-    <div class="body">
+<div class="my_view_content">
+    <div class="article-header">
+        <h3>{{ post.title }}</h3><span class="header-comment-count"> {{ post.publish_at }}</span>
+    </div>
         {% if post %}
-            <h3>{{ post.title }}</h3>
-            <p>{{ post.publish_at}}</p>
+            <div class="article">
+                <div class="article-description">
+                    {{ post.body }}
+                </div>
+            </div>
             <br>
-            <p>{{ post.body|safe }}</p>
         {% endif %}
 
             <ul class="pager">
