--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -1,26 +1,30 @@
 {% extends 'simple.html' %}
+{% load i18n %}
 {% comment %}
 {% include "layouts/navbar.html" with active_tab='news' %}
 {% endcomment %}
 
 {% block body %}
+<div class="my_view_content">
+    <div class="article-header">
+        <h1>{% trans "News of the Festival" %}</h1>
+    </div>
+    <br/>
+
     {% if posts %}
         <ul>
         {% for post in posts %}
         <div class="article">
             <div class="article-header"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a><span class="header-comment-count"> {{ post.publish_at }}</span></div>
-                <div class="article-content">
                     <div class="article-description">
-                        {% autoescape off %}
-                            {{ post.excerpt }}
-                        {% endautoescape %}
+                        {{ post.excerpt }}
                     </div>
-                </div>
         </div>
         {% endfor %}
     {% else %}
         <p>Sorry, not news yet</p>
     {% endif %}
         </ul>
+</div>
 {% endblock %}
 
