--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,7 @@
         <ul class="nav">
             <li><a href="{% url news %}../about/"><i class="icon-home icon-white"></i> {% trans "О фестивале"%}</a></li>
             <li><a href="{% url news %}../regulations/">{% trans "Положение"%}</a></li>
-            <li><a href="#schedule">{% trans "Расписание"%}</a></li>
+            <li><a href="{% url shedule %}">{% trans "Расписание"%}</a></li>
           <li id="news-link"><a href="{% url news %}"><i class="i"></i>{% trans "Новости "%}</a></li>
           <li id="works-link"><a href="{% url works %}"><i class="icon-film icon-white"></i>{% trans "Стоп!Снято! "%}</a></li>
           <li class="dropdown">
