--- a/templates/page/shedule.html
+++ b/templates/page/shedule.html
@@ -144,7 +144,7 @@
         </ul>
     </div>
     <div class="my_article">
-        Ольга Донец, сценарист и кинодраматург расскажет о специфике создания и особенностях <strong>КИНОСЦЕНАРИЯ</strong>. Как написать историю так,чтобы ее захотелось снять!
+        Ольга Донец, сценарист и кинодраматург, расскажет о специфике создания и особенностях <strong>КИНОСЦЕНАРИЯ</strong>. Как написать историю так,чтобы ее захотелось снять!
         <br/> 
         <br/> 
         <span class="label label-info">ПРОГРАММА МАСТЕР-КЛАССА:</span>
