--- a/templates/simple.html
+++ b/templates/simple.html
@@ -68,15 +68,27 @@
           <div class="row">
               <div class="span2">
                   {% block lift_sidebar %}
+                  <div class="row">
+                      <div class="span2">
+                        <div class="page-header alert alert-success">
+                          <h3>Организатор</h3>
+                        </div>
+                      </div>
+                  </div>
+
+                  <div class="row">
+                      <div class="span2">
                       <ul class="thumbnails">
                           <li class="span2">
                             <div  align="middle" class="thumbnail">
-                              <a href="http://vtr-center.ru/" title="look ma!" target="_blank">
-                                <img src="https://s3-eu-west-1.amazonaws.com/kinoweekend/partner_VRT.jpg" alt="vtr-center" width="80%">
+                              <a href="http://xn--d1aadekogaqcb.xn--p1ai/" title="Дом молодежи" target="_blank">
+                                <img src="http://xn--d1aadekogaqcb.xn--p1ai/images/sampledata/icetheme/dom_molodezhi_logo_bez_teksta.png" alt="Дом молодежи" width="80%">
                               </a>
                             </div>
                           </li>
                       </ul>
+                      </div>
+                  </div>
                   {% endblock %}
               </div>
 
